Completed upto remove item from redux

--- a/src/assets/Navbar.css
+++ b/src/assets/Navbar.css
@@ -15,13 +15,9 @@
 
 .navbar .left .logo {
     font-style: italic;
-    color: aqua;
+    text-decoration: none;
 }
 
-/* .left,
-.right {
-    border: 1px solid;
-} */
 
 .right {
     height: inherit;
