--- a/src/assets/CartItems.css
+++ b/src/assets/CartItems.css
@@ -1,17 +1,20 @@
 .btn-right {
-    float: right;
-    margin: 1.5rem;
+    float: inline-end;
+    margin: 1rem;
     outline: none;
     border-radius: 10px;
     padding: 10px;
+    position: relative;
+    margin-left: calc(100% - 10%);
 }
 
+
 .cartList{
-    margin-top: 6rem;
     padding: 1rem;
     height: fit-content;
     width: 100%;
     box-sizing: border-box;
+    margin-top: 3rem;
 }
 
 .cartList .cartItem{
@@ -34,11 +37,10 @@
     height: inherit;
 }
 .cartItem .left .item-brief{
-    border: 1px solid;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    align-items: center;
+    width: inherit;
     margin-left: 20px;
 }
 .cartItem .right p {
@@ -55,4 +57,8 @@
     flex-direction: row;
     width: 100%;
     justify-content: flex-end;
+}
+
+.btn-edit button {
+    margin-right: 10px;
 }
