--- a/src/assets/Navbar.css
+++ b/src/assets/Navbar.css
@@ -3,7 +3,11 @@
     flex-direction: row;
     justify-content: space-between;
     height: 50px;
-    box-shadow: 0px 0px 20px;
+    box-shadow: 0px 0px 10px;
+    position: fixed;
+    width: 100%;
+    background-color: #d7e3ed;
+    top: 0;
 }
 
 .navbar .left {
@@ -14,8 +18,10 @@
 }
 
 .navbar .left .logo {
-    font-style: italic;
-    text-decoration: none;
+    font-weight: 800;
+    font-family: fantasy;
+    letter-spacing: 2px;
+    word-spacing: 5px;
 }
 
 
