--- a/src/assets/CartItems.css
+++ b/src/assets/CartItems.css
@@ -1,20 +1,11 @@
-.btn-right {
-    float: inline-end;
-    margin: 1rem;
-    outline: none;
-    border-radius: 10px;
-    padding: 10px;
-    position: relative;
-    margin-left: calc(100% - 10%);
-}
-
 
 .cartList{
-    padding: 1rem;
     height: fit-content;
     width: 100%;
     box-sizing: border-box;
     margin-top: 3rem;
+    display: flex;
+    flex-wrap: wrap;
 }
 
 .cartList .cartItem{
@@ -27,38 +18,80 @@
     margin-bottom: 20px;
 }
 
-.cartItem .left{
-    display: flex;
-    flex-direction: row;
-    width: calc(100% - 50%);
-    height: inherit;
-}
-.cartItem .left img{
-    height: inherit;
-}
-.cartItem .left .item-brief{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    width: inherit;
-    margin-left: 20px;
-}
-.cartItem .right p {
-    overflow-y: auto;
-    height: inherit;
-}
-.cartItem .right {
-    width: calc(100% - 50%);
-    display: flex;
-    flex-direction: column;
-}
-.btn-edit{
-    display: flex;
-    flex-direction: row;
-    width: 100%;
-    justify-content: flex-end;
-}
 
-.btn-edit button {
-    margin-right: 10px;
+  .products {
+    height: auto;
+    display: flex;
+    flex-wrap: wrap;
+    border: 1px solid black;
+    justify-content: center;
+    align-items: center;
+  }
+  
+/* @media (max-width: 768px) {
+  .products {
+    grid-template-columns: 1fr;
+  }
 }
+  
+  @media (max-width: 480px) {
+    .products {
+      grid-template-columns: 1fr;
+    }
+  } */
+
+  .product {
+    border-radius: 15px;
+    padding: 50px;
+    display: flex;
+    flex-direction: column;
+    margin: 0px 0px 60px 60px;
+    box-shadow: 0px 0px 20px 0px #bed0d5;
+    justify-content: center;
+    align-items: center;
+}
+  
+  .product img {
+    height: 300px;
+  }
+  
+  .product .description {
+    text-align: center;
+    font-size: 20px;
+    width: 20rem;
+  }
+/*   
+  .product:hover {
+    transform: scale(1.05);
+    transition: 0.2s ease-in;
+    cursor: pointer;
+  } */
+  
+  .addToCartBttn {
+    background-color: transparent;
+    border: 2px solid black;
+    font-size: 16px;
+    min-width: 100px;
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    border-radius: 15px;
+  }
+  
+   .addToCartBttn:hover {
+    background-color: rgb(156, 156, 156);
+    color: white;
+    cursor: pointer;
+  }
+/*
+  .addToCartBttn:active {
+    transform: scale(1.05);
+    background-color: rgb(138, 138, 138);
+  } */
+
+  .product-link {
+    color:rgb(70, 70, 70);
+    text-decoration: none;
+    
+  }
