--- a/src/assets/Navbar.css
+++ b/src/assets/Navbar.css
@@ -13,8 +13,9 @@
 .navbar .left {
     width: calc(100% - 60%);
     display: flex;
-    justify-content: space-around;
+    justify-content: flex-start;
     align-items: center;
+    margin-left: 20px;
 }
 
 .navbar .left .logo {
@@ -28,7 +29,7 @@
 .right {
     height: inherit;
     display: flex;
-    width: calc(35% - 20%);
+    width: 20%;
     justify-content: space-around;
     align-items: center;
 }
