--- a/src/assets/Navbar.css
+++ b/src/assets/Navbar.css
@@ -3,10 +3,10 @@
     flex-direction: row;
     justify-content: space-between;
     height: 50px;
-    box-shadow: 0px 0px 10px;
+    box-shadow: 0px 0px 10px 0px #bed0d5;
     position: fixed;
     width: 100%;
-    background-color: #d7e3ed;
+    background-color: #bed0d5;
     top: 0;
 }
 
