--- a/src/assets/Cart.css
+++ b/src/assets/Cart.css
@@ -13,8 +13,8 @@
   }
   
   .cartItem {
-    width: 700px;
-    height: fit-content;
+    width: 450px;
+    height: 250px;
     display: flex;
     box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.2);
     border-radius: 25px;
@@ -24,13 +24,13 @@
   }
   
   .cartItem img {
-    height: 200px;
+    height: 50%;
     margin-right: 20px;
   }
   
   .cartItem .description {
     flex: 1;
-    font-size: 30px;
+    font-size: 15px;
     display: flex;
     flex-direction: column;
     justify-content: center;
