--- a/src/assets/Cart.css
+++ b/src/assets/Cart.css
@@ -1,4 +1,4 @@
-.cart {
+.cartmain{
   margin-top: 4rem;
     display: flex;
     flex-direction: column;
@@ -7,7 +7,7 @@
   }
   
   @media (max-width: 768px) {
-    .cart {
+    .cartmain{
     flex-direction: column;
     }
   }
@@ -41,9 +41,11 @@
   
   .countHandler {
     display: flex;
+    flex-direction: row;
     align-items: center;
-    justify-content: flex-end;
+    justify-content: space-between;
     margin-top: 10px;
+    width: 100%;
   }
   
   .countHandler input {
@@ -67,6 +69,13 @@
   
   .countHandler button:hover {
     background-color: #d9d9d9;
+  }
+  
+  .delete{
+    cursor: pointer;
+  }
+  .delete:hover{
+    transform: scale(1.3);
   }
   
   .checkout {
