--- a/src/assets/Cart.css
+++ b/src/assets/Cart.css
@@ -1,3 +1,4 @@
+
 .cartmain{
   margin-top: 4rem;
     display: flex;
@@ -21,6 +22,12 @@
     margin: 30px 0;
     padding: 20px;
     background-color: white;
+  }
+  @media (max-width:500px) {
+    .cartItem{
+      width:300px;
+      height: 300px;
+    }
   }
   
   .cartItem img {
