--- a/src/assets/ProductDetails.css
+++ b/src/assets/ProductDetails.css
@@ -18,8 +18,8 @@
   
   .product-details-container {
     padding: 1rem;
-    min-width: 400px;
-    margin: 10px;
+    /* margin: 10px; */
+    margin: auto;
   }
   
   .product-name {
