--- a/src/assets/Cart.css
+++ b/src/assets/Cart.css
@@ -122,3 +122,10 @@
     margin-top: 20px;
     width: 340px;
   }
+
+  .checkLogin{
+    position: absolute;
+    top: 50%;
+    right: 50%;
+    transform: translate(50%, -50%);
+  }
