--- a/src/assets/Cart.css
+++ b/src/assets/Cart.css
@@ -50,7 +50,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: space-between;
+    justify-content: flex-end;
     margin-top: 10px;
     width: 100%;
   }
